Added comments and descriptions

--- a/ViewerMain/PDFViewer/Modules/AdminConsole/index.css
+++ b/ViewerMain/PDFViewer/Modules/AdminConsole/index.css
@@ -1,4 +1,30 @@
-﻿body {
+﻿/*
+
+========}    P D F V I E W E R   --   A D M I N C O N S O L E    {========
+        
+        PDFViewer AdminConsole 4.0.0
+        COPYRIGHT (C) 2024 PRESTON SIA (PRESIA27)
+        THIS SOFTWARE IS LICENSED UNDER THE APACHE LICENSE, VERSION 2.0
+        [https://www.apache.org/licenses/LICENSE-2.0]
+
+        This project utilizes the PDF.js project by Mozilla.
+        PDF.js is licensed under Apache, and Copyright (C) Mozilla and individual contributors.
+        [https://mozilla.github.io/pdf.js/]
+
+        This project also utilizes:
+          jQuery 3.5.1, licensed under the MIT license
+          and Copyright JS Foundation and other contributors.
+          [https://jquery.com/]
+          [https://jquery.org/license]
+
+          jQuery UI v 1.11.4, under the MIT license and
+          Copyright 2015 jQuery Foundation and other contributors
+          [http://jqueryui.com]
+
+*/
+
+
+body {
   font-family: Arial;
   font-size: 16px;
   margin: 0;
