--- a/ViewerMain/PDFViewer/index.css
+++ b/ViewerMain/PDFViewer/index.css
@@ -1,3 +1,19 @@
+/*
+
+========}    P D F V I E W E R    {========
+        
+        PDFViewer 4.0.0
+        COPYRIGHT (C) 2024 PRESTON SIA (PRESIA27)
+        THIS SOFTWARE IS LICENSED UNDER THE APACHE LICENSE, VERSION 2.0
+        [https://www.apache.org/licenses/LICENSE-2.0]
+
+        This project utilizes the PDF.js project by Mozilla.
+        PDF.js is licensed under Apache, and Copyright (C) Mozilla and individual contributors.
+        [https://mozilla.github.io/pdf.js/]
+
+ */
+
+
 body {
   font-family: Arial;
   font-size: 15px;
